<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- String other -->
    <string name="app_name">Advanced Zombie Run</string>
    <string name="title_activity_roomstayhost">RoomStayActivity</string>
    <string name="marquerdesttit">Destination</string>
    <string name="marqueurdestmsg">You have to go there.</string>

    <!-- String Menus -->
    <string name="menu_settings">Settings</string>
    <string name="menu_centerMap">Center the Map</string>

    <!-- String activity_multi_player -->
    <string name="title_activity_multi_player">MultiPlayerActivity</string>
    <string name="refresh">Refresh</string>
    <string name="host_game">Create a game</string>

    <!-- String activity_preferences -->
    <string name="title_activity_preferences">Preferences</string>
    <string name="pseudo">Player Name</string>
    <string name="pseudoHint">Name</string>
    <string name="save">Save</string>
    <string name="density">Population Density</string>
    <string name="speed">Zombies\'s Speed</string>
    <string name="timer">Timer</string>
    <string name="life">Life Points</string>
    <string name="alert">Alert when close to a Zombie</string>
    <string name="alert1">Vibration</string>
    <string name="alert2">Sound</string>
    <string name="alert3">Nothing</string>
    <string name="return_menu">Previous</string>
    <string name="run_game">Start the game</string>
    <string name="make_game">Create</string>

    <!-- String activity_home -->
    <string name="title_activity_home">Advanced Zombie Run</string>
    <string name="titlepart1">Advanced</string>
    <string name="titlepart2">Zombie Run</string>
    <string name="title_accueil">Advanced Zombie Run</string>
    <string name="solo_game">Singleplayer</string>
    <string name="multi_game">Multiplayer</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>

    <!-- String activity_about -->
    <string name="title_activity_about">About activity</string>
    <string name="projet">Projet 2012&#8211;2013</string>
    <string name="developper">Développement</string>
    <string name="nomade">d\'application nomade</string>
    <string name="make">Produce by</string>
    <string name="besson">Tom BESSON</string>
    <string name="francois">Willy FRANCOIS</string>
    <string name="perrin">Jean-Baptiste PERRIN</string>
    <string name="rubagotti">Joris RUBAGOTTI</string>
    <string name="run_map">Launch test map</string>
    
    <!-- String activity_game_end -->
    <string name="title_activity_gameend">Game End activity</string>
    <string name="win_game">Your have win !</string>
    <string name="lost_game">Your have lost !</string>
    <string name="time_end">Time is Up !</string>
    <string name="end_game">Master Menu</string>
    
    <!-- String AlertDialog -->
    <string name="diag_gps_title">GPS not activated</string>
    <string name="diag_gps_text">You have to activate it</string>
    <!--  <string name="diag_wifi_title">WIFI is not enable</string> -->
    <string name="diag_wifi_text">Please launch WIFI to play in multiplayer</string>
    <string name="diag_destination_title">Destination Spotted</string>
    <string name="diag_destination_text">Do you want to choose this destination ?</string>
    <string name="diag_backMenu">Back to menu</string>
    <string name="diag_ok">OK</string>
    <string name="diag_quit_title">Warning</string>
    <string name="diag_quit_text">Quit Game ?</string>
    <string name="diag_yes">Yes</string>
    <string name="diag_no">No</string>

    <string-array name="densities_array">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>Incredibly high</item>
    </string-array>
    <string-array name="speeds_array">
        <item>Slow</item>
        <item>Medium</item>
        <item>Fast</item>
        <item>Very Fast</item>
    </string-array>
    <string-array name="timers_array">
        <item>Infinite</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="lifes_array">
        <item>Just One</item>
        <item>Three Life points</item>
        <item>Ten life points</item>
        <item>Forty two</item>
        <item>One Hundred</item>
        <item>Over nine thousand</item>
    </string-array>

</resources>